tests/semantic/valid/function_variable_and_array_declaration_definition.c
/*
 * Multi-line comment.
 */

#include <stdio.h>
#include <stdint.h>

void foo(int8_t a0, int8_t b0, int8_t c0);

int32_t main(int32_t, char argv) {
    int8_t tab[5];
    int8_t tab2[] = {1,2,3};
    return 0;
}

void foo(int8_t a1, int8_t b1, int8_t c1)
{
    char a2, b2, c2;
}
