tests/semantic/invalid/different_function_declaration_definition_parameter_type.c
/*
 * Multi-line comment.
 */

#include <stdio.h>
#include <stdint.h>

void foo(int8_t name);

int32_t main(int32_t, char argv) {
    int32_t a, b = 0;
    //char c = '!';
    return 0;
}

void foo(int16_t name)
{
    char a2, b2, c2;
}
